#what flags you want to pass to the C compiler & linker
CFLAGS = --pedantic -Wall 
LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# # the previous manual Makefile
# bin_PROGRAMS = targetbinary1 targetbinary2 [...] targetbinaryN
# targetbinary1_SOURCES = targetbinary1.c myheader.h [...]
# targetbinary2_SOURCES = targetbinary2.c
# .
# .
# targetbinaryN_SOURCES = targetbinaryN.c

bin_PROGRAMS = mycode
mycode_SOURCES = main.c hello.c hello.h
